<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"

    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/TvSongNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"

            android:text="@string/play_now"
            android:textSize="18sp"
            android:textColor="#696969"
            android:layout_gravity="bottom"

            />


        <TextView
            android:id="@+id/TvSongName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/song_name"
            android:gravity="left"

            android:textSize="16sp"

            android:textColor="#D74CAF50"
            android:layout_gravity="bottom"
            />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BtnSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select"
            android:textColor="#ffffff"
            android:backgroundTint="#D000D292"
            android:layout_marginTop="20dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_selector"
            android:textSize="14sp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:backgroundTint="@color/translucent"
            />
        <ImageView
            android:id="@+id/ImCd"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="0"
            android:background="@drawable/cd"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:backgroundTint="@color/translucent"
            />

        <Button
            android:id="@+id/BtnFindAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:backgroundTint="#D000D292"
            android:text="@string/find_all"
            android:layout_marginTop="20dp"
            android:layout_margin="5dp"

            android:background="@drawable/btn_selector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BSearchSong"
            android:layout_gravity="top"

            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"


            android:layout_margin="8dp"

            android:textSize="15sp"
            android:background="@drawable/search"
            android:textColor="#696969"


            />
        <EditText
            android:id="@+id/ESearchName"
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="8"
            android:background="@drawable/custom_edittext_background"
            android:hint="在此处搜索列表歌曲"
            android:textSize="15sp"
            android:theme="@style/MyEditText"

            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:maxLines="1"

            android:textColor="#696969"
            android:backgroundTint="#00350F0F"
            android:textColorLink="#696969"

            android:layout_margin="10dp"
            />

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvItem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginTop="10dp"

            />

    <ListView
        android:id="@+id/VrItem"
        android:layout_width="match_parent"
        android:choiceMode="singleChoice"

        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:listSelector="#8DBCC3C1" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/songTimeNow"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"

            android:text="@string/song_time_now"
            android:textColor="#696969"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:textSize="12sp" />
        <SeekBar
            android:id="@+id/MusicSeekBar"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/songTimeAll"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:text="@string/song_time_all"
            android:textColor="#696969"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:backgroundTint="@color/translucent"
            />
        <Button
            android:id="@+id/BtnOrder"
            android:layout_gravity="top"
            android:background="@drawable/order"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="#696969"
            />
        <Button
            android:id="@+id/BtnPre"
            android:layout_gravity="top"
            android:background="@drawable/pre"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:textSize="15sp"
            android:layout_weight="0"
            android:textColor="#696969" />

        <Button
            android:id="@+id/BtnPlayPause"
            android:layout_width="45dp"
            android:background="@drawable/playsong"
            android:layout_height="45dp"
            android:layout_gravity="top"
            android:layout_margin="2dp"
            android:layout_weight="0"
            android:textColor="#696969"
            android:textSize="15sp" />

        <Button
            android:id="@+id/BtnNext"
            android:layout_gravity="top"
            android:background="@drawable/next"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:textSize="15sp"
            android:layout_weight="0"

            android:textColor="#696969"
            />

        <Button
            android:id="@+id/BtnLocation"
            android:layout_gravity="top"
            android:background="@drawable/arrive"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="#696969"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:backgroundTint="@color/translucent"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/BtnStop"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:textSize="14sp"
            android:layout_weight="1"
            android:backgroundTint="#D000D292"

            android:text="@string/stop"
            android:textColor="#ffffff" />



        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:backgroundTint="@color/translucent"
            />

        <Button
            android:id="@+id/BtnQuit"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:layout_weight="1"
            android:backgroundTint="#D000D292"
            android:text="@string/quit"
            android:textSize="14sp"

            android:textColor="#ffffff" />

    </LinearLayout>




</LinearLayout>

